# actix-admin

./: .gitignore  AGENTS.md  Cargo.toml  README.md  index.html
.github/workflows/: docs.yml  release.yml
docs/: advanced.md  quick-start.md  troubleshooting.md
examples/: memory.rs
src/: cli.rs  lib.rs  registry.rs  resource.rs  site.rs
src/auth/: json_store.rs  middleware.rs  mod.rs  store.rs
src/handlers/: auth.rs  dashboard.rs  mod.rs  resource.rs
src/templates/: base.html  dashboard.html  form.html  list.html  login.html
src/types/: column.rs  error.rs  field.rs  mod.rs  query.rs
tests/: test_handlers.rs  test_registry.rs  test_resource.rs
