[package]
name = "actix-web-admin"
version = "0.1.1"
edition = "2021"
description = "A powerful admin panel library for Actix-web 4 applications"
license = "AGPL-3.0"
repository = "https://github.com/TincoNomad/actix-admin"
homepage = "https://github.com/TincoNomad/actix-admin"
documentation = "https://docs.rs/actix-web-admin"
readme = "README.md"
keywords = ["actix", "admin", "crud", "web", "panel"]
categories = ["web-programming", "web-programming::http-server"]
authors = ["TincoNomad (@tincoNomad)"]

[dependencies]
actix-web = "4"
actix-session = { version = "0.9", features = ["cookie-session"] }
argon2 = "0.5"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1"
tokio = { version = "1", features = ["full"] }
dialoguer = "0.11"
log = "0.4"
env_logger = "0.10"

[[bin]]
name = "admin-cli"
path = "src/bin/admin-cli.rs"

[[bin]]
name = "createsuperuser"
path = "src/bin/createsuperuser.rs"

[dev-dependencies]
actix-web = { version = "4", features = ["macros"] }
actix-http = "3"
uuid = { version = "1", features = ["v4"] }
